--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "typescript": "^4.1.4"
   },
   "dependencies": {
-    "nanobus": "^4.5.0"
+    "fast-deep-equal": "^3.1.3",
+    "nanobus": "^4.5.0",
+    "rfdc": "^1.2.0"
   }
 }
