--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
-  "repository": "",
+  "repository": "git+ssh://git@github.com/cinnamon-bun/layer-experiments.git",
   "author": "Cinnamon <cinnamon_bun_github@fastmail.com>",
-  "license": "ISC",
+  "license": "AGPL-3.0",
   "scripts": {
     "clean": "rm -rf build coverage .nyc_output",
     "build": "tsc",
