--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "fast-deep-equal": "^3.1.3",
     "nanobus": "^4.5.0",
-    "rfdc": "^1.2.0"
+    "rfdc": "^1.2.0",
+    "valtio": "^0.8.0"
   }
 }
