--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "^4.1.4"
   },
   "dependencies": {
+    "earthstar": "^6.3.4",
     "fast-deep-equal": "^3.1.3",
     "nanobus": "^4.5.0",
     "rfdc": "^1.2.0",
