--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   "license": "AGPL-3.0",
   "scripts": {
     "clean": "rm -rf build coverage .nyc_output",
-    "build": "tsc",
+    "tsc": "tsc",
+    "tsc-check": "tsc -noEmit",
+    "esbuild": "./esbuild.sh",
+    "build": "tsc -noEmit && ./esbuild.sh",
     "start": "node build/index.js",
     "test": "tap -Rspecy --jobs=1 build/test/*.test.js",
     "build-and-test": "yarn build && yarn test",
@@ -18,6 +21,7 @@
   "devDependencies": {
     "@types/node": "^14.14.25",
     "@types/tap": "^14.10.2",
+    "esbuild": "^0.9.0",
     "tap": "^14.11.0",
     "typescript": "^4.1.4"
   },
