--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "prepublishOnly": "yarn run clean && yarn run build"
   },
   "devDependencies": {
+    "@types/chalk": "^2.2.0",
     "@types/node": "^14.14.25",
     "@types/tap": "^14.10.2",
     "tap": "^14.11.0",
     "typescript": "^4.1.4"
   },
   "dependencies": {
+    "chalk": "^4.1.0",
     "earthstar": "^6.3.5",
     "fast-deep-equal": "^3.1.3",
     "nanobus": "^4.5.0",
